--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,21 @@
+name: nama_rustaq_web
+environment:
+  sdk: ">=2.18.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.24.2
-  firebase_storage: ^11.2.5
+  firebase_auth: ^5.9.1
   cloud_firestore: ^5.4.4
+  firebase_storage: ^11.2.5
   image_picker_for_web: ^3.0.0
+  uuid: ^4.1.0
+  syncfusion_flutter_xlsio: ^22.2.48
+  pdf: ^3.11.1
+  http: ^1.4.0
+
+flutter:
+  assets:
+    - assets/artboard2_375a155e-6ed9-4735-812e-7bc9f5a6639f.png
+    - assets/nama_curve_067c25a7-7f31-4e80-b49a-9ef4f4209ca1.png
